--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row justify-content-center">
             <div class="col-md-10">
               <div class="title mb-0">
-                <h1 class="text-center text-white">Nuestro candidatos</h1>
+                <h1 class="text-center text-white">Nuestros candidatos</h1>
                 <div class="img-ind"> <img src="./img/brand/logos-18.png" alt=""></div>
               </div>
               <div class="row mt-mob">
