--- a/candidato_alcaldia.html
+++ b/candidato_alcaldia.html
@@ -25,7 +25,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item text-darkblue"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+              <li class="nav-item text-darkblue"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_gobernacion.html">Gobernación</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_alcaldia.html">Alcaldía</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidatos_concejo.html">Concejales</a></li>
@@ -34,9 +34,10 @@
         </div>
       </inav>
     </header>
-    <section class="bg-yellow py-1">
-      <div class="container">
-        <h4 class="text-center m-0">Sin jefes y sin partidos políticos tradicionales</h4>
+    <section class="bg-yellow py-3">
+      <div class="container d-md-flex justify-content-center align-items-center d-block">
+        <h4 class="text-center m-0">¡Que esperas para hacer parte de este equipo!</h4>
+        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="#">Registrarme </a></div>
       </div>
     </section>
     <section> 
@@ -60,6 +61,7 @@
         </div>
       </div>
     </section>
+    <div class="py-5"></div>
     <div class="modal fade" id="lugarVotacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
