--- a/candidatos_concejo.html
+++ b/candidatos_concejo.html
@@ -25,7 +25,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item text-darkblue"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+              <li class="nav-item text-darkblue"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_gobernacion.html">Gobernación</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_alcaldia.html">Alcaldía</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidatos_concejo.html">Concejales</a></li>
@@ -34,9 +34,10 @@
         </div>
       </inav>
     </header>
-    <section class="bg-yellow py-1">
-      <div class="container">
-        <h4 class="text-center m-0">Sin jefes y sin partidos políticos tradicionales</h4>
+    <section class="bg-yellow py-3">
+      <div class="container d-md-flex justify-content-center align-items-center d-block">
+        <h4 class="text-center m-0">¡Que esperas para hacer parte de este equipo!</h4>
+        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="#">Registrarme </a></div>
       </div>
     </section>
     <section> 
@@ -50,16 +51,46 @@
         <div class="description"> 
           <div class="img-person"> <img src="" alt=""></div>
           <ul class="d-grid">
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Claudia Giraldo Rivera</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Wilfer Alberto Ramirez Martinez</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Juan Sebastián Sánchez Gonzalez</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">No info</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">No info</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Oscar Betancur</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Francisco Ossa</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">No info</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">No info</h4>
+            </li>
+            <li class="d-flex justify-content-center align-items-center">
+              <h3 class="m-0 me-2">#01. </h3>
+              <h4 class="m-0">Andrés Dario Naranjo Restrepo</h4>
+            </li>
           </ul>
         </div>
       </div>
@@ -83,7 +114,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Claudia Giraldo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -103,7 +134,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Wilfer Ramirez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -123,7 +154,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Sebastian Sánchez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -143,7 +174,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -163,7 +194,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -203,7 +234,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Francisco Ossa</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -223,7 +254,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Jhon Jairo Holguín</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -243,7 +274,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -263,7 +294,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="h5 text-strong text-center">Andrés Naranjo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
