--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item text-darkblue"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+              <li class="nav-item text-darkblue"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_gobernacion.html">Gobernación</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidato_alcaldia.html">Alcaldía</a></li>
               <li class="nav-item text-darkblue"><a class="nav-link" href="candidatos_concejo.html">Concejales</a></li>
@@ -34,9 +34,10 @@
         </div>
       </inav>
     </header>
-    <section class="bg-yellow py-1">
-      <div class="container">
-        <h4 class="text-center m-0">Sin jefes y sin partidos políticos tradicionales</h4>
+    <section class="bg-yellow py-3">
+      <div class="container d-md-flex justify-content-center align-items-center d-block">
+        <h4 class="text-center m-0">¡Que esperas para hacer parte de este equipo!</h4>
+        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="#">Registrarme </a></div>
       </div>
     </section>
     <div class="slickAwards m-0 customDots">
@@ -75,6 +76,7 @@
                       </div>
                     </div>
                   </div>
+                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_alcaldia.html">Conocer más de Esteban </a></div>
                 </div>
                 <div class="col-md-6"> 
                   <div class="card primary-card">
@@ -89,6 +91,7 @@
                       </div>
                     </div>
                   </div>
+                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_gobernacion.html">Conocer más del profe</a></div>
                 </div>
               </div>
             </div>
@@ -114,7 +117,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Claudia Giraldo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -134,7 +137,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Wilfer Ramirez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -154,7 +157,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Sebastian Sánchez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -174,7 +177,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -194,7 +197,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -234,7 +237,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Francisco Ossa</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -254,7 +257,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Jhon Jairo Holguín</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -274,7 +277,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -294,7 +297,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="h5 text-strong text-center">Andrés Naranjo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -356,6 +359,7 @@
         <div class="socials d-flex justify-content-center mt-4"><a href="https://www.facebook.com/independientesitagui/" target="_blank"><img src="./img/vector/facebook.svg" alt=""></a><a href="https://www.instagram.com/independientesitagui/" target="_blank"><img src="./img/vector/instagram.svg" alt=""></a></div>
       </div>
     </footer>
+    <script type="text/javascript" src="js/activeModalAuto.js"></script>
     <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
     <script type="text/javascript" src="js/vendor/popper.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
