--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <inav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container justify-content-between"><a class="navbar-brand" href="#"><img src="./img/brand/logo.jpg" alt=""></a>
+        <div class="container justify-content-between"><a class="navbar-brand" href="index.html"><img src="./img/brand/logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -76,7 +76,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_alcaldia.html">Conocer más de Esteban </a></div>
+                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_gobernacion.html">Conocer más de Esteban </a></div>
                 </div>
                 <div class="col-md-6"> 
                   <div class="card primary-card">
