--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                           <div class="col-3 d-flex justify-content-center"><a href="https://www.facebook.com/estebanrestrepot" target="_blank"><img src="./img/vector/facebook.svg" alt=""></a></div>
                           <div class="col-3 d-flex justify-content-center border-start"><a href="https://www.instagram.com/estebanrestre/" target="_blank"><img src="./img/vector/instagram.svg" alt=""></a></div>
                           <div class="col-3 d-flex justify-content-center border-start"><a href="https://twitter.com/estebanrestre" target="_blank"><img src="./img/vector/twitter.png" alt=""></a></div>
-                          <div class="col-3 d-flex justify-content-center border-start"><a href="estebanrestrepo.com.co" target="_blank"><img src="./img/vector/web.png" alt=""></a></div>
+                          <div class="col-3 d-flex justify-content-center border-start"><a href="https://www.estebanrestrepo.com.co" target="_blank"><img src="./img/vector/web.png" alt=""></a></div>
                         </div>
                       </div>
                     </div>
