--- a/candidatos_concejo.html
+++ b/candidatos_concejo.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <inav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container justify-content-between"><a class="navbar-brand" href="#"><img src="./img/brand/logo.jpg" alt=""></a>
+        <div class="container justify-content-between"><a class="navbar-brand" href="index.html"><img src="./img/brand/logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -56,39 +56,39 @@
               <h4 class="m-0">Claudia Giraldo Rivera</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#02. </h3>
               <h4 class="m-0">Wilfer Alberto Ramirez Martinez</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#03. </h3>
               <h4 class="m-0">Juan Sebastián Sánchez Gonzalez</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#04. </h3>
               <h4 class="m-0">No info</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#05. </h3>
               <h4 class="m-0">No info</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#06. </h3>
               <h4 class="m-0">Oscar Betancur</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#07. </h3>
               <h4 class="m-0">Francisco Ossa</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#08. </h3>
               <h4 class="m-0">No info</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#09. </h3>
               <h4 class="m-0">No info</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
-              <h3 class="m-0 me-2">#01. </h3>
+              <h3 class="m-0 me-2">#10. </h3>
               <h4 class="m-0">Andrés Dario Naranjo Restrepo</h4>
             </li>
           </ul>
