--- a/candidato_alcaldia.html
+++ b/candidato_alcaldia.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <inav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container justify-content-between"><a class="navbar-brand" href="#"><img src="./img/brand/logo.jpg" alt=""></a>
+        <div class="container justify-content-between"><a class="navbar-brand" href="index.html"><img src="./img/brand/logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -37,7 +37,7 @@
     <section class="bg-yellow py-3">
       <div class="container d-md-flex justify-content-center align-items-center d-block">
         <h4 class="text-center m-0">¡Que esperas para hacer parte de este equipo!</h4>
-        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="#">Registrarme </a></div>
+        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="https://independientes.wappid.com/login" target="_blank">Registrarme </a></div>
       </div>
     </section>
     <section> 
