--- a/candidatos_concejo.html
+++ b/candidatos_concejo.html
@@ -37,7 +37,7 @@
     <section class="bg-yellow py-3">
       <div class="container d-md-flex justify-content-center align-items-center d-block">
         <h4 class="text-center m-0">¡Que esperas para hacer parte de este equipo!</h4>
-        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="#">Registrarme </a></div>
+        <div class="btn-action d-flex justify-content-center"><a class="btn-blue ms-0 ms-md-2 mt-2 mt-md-0" href="https://independientes.wappid.com/login" target="_blank">Registrarme </a></div>
       </div>
     </section>
     <section> 
